--- a/toolkit/components/xulstore/Cargo.toml
+++ b/toolkit/components/xulstore/Cargo.toml
@@ -5,10 +5,12 @@ authors = ["nobody@mozilla.org"]
 license = "MPL-2.0"
 
 [dependencies]
+crossbeam-utils = "0.6.3"
 lazy_static = "1.0"
 libc = "0.2"
 lmdb-rkv = "0.11.2"
 log = "0.4"
+moz_task = { path = "../../../xpcom/rust/moz_task" }
 nsstring = { path = "../../../xpcom/rust/nsstring" }
 nserror = { path = "../../../xpcom/rust/nserror" }
 rkv = "0.9.3"
