correctly register nsIXULStore as singleton; encapsulate impl details
This version correctly registers nsIXULStore as a singleton and ensures that only a single instance will be created.

It also encapsulates implementation details like the xulstore_* C functions by separating the public declarations (in XULStore.h) from their definitions (in XULStore.cpp) and moving the xulstore_* declarations into an anonymous namespace.

--- a/toolkit/components/xulstore/components.conf
+++ b/toolkit/components/xulstore/components.conf
@@ -9,7 +9,8 @@ Classes = [
         'cid': '{be70bf11-0c28-4a02-a38c-0148538d42cf}',
         'contract_ids': ['@mozilla.org/xul/xulstore;1'],
         'type': 'nsIXULStore',
-        'headers': ['XULStore.h'],
-        'constructor': 'NewXULStore',
+        'headers': ['mozilla/XULStore.h'],
+        'singleton': True,
+        'constructor': 'mozilla::XULStore::GetService',
     },
 ]
